--- a/assets/css/prac_2.css
+++ b/assets/css/prac_2.css
@@ -8,7 +8,7 @@
 
   position: absolute;
   opacity: 0.3;
-  right: 10px;
+  z-index: 1;
   /* TODO */
   /* 포지션 구현하기 */
   /* 불투명도 구현하기 */
@@ -19,7 +19,9 @@
   background-color: lightseagreen;
 
   position: absolute;
+  left: 15px;
   opacity: 0.3;
+  z-index: 2;
   /* TODO */
   /* 포지션 구현하기 */
   /* 불투명도 구현하기 */
@@ -30,7 +32,9 @@
   background-color: lightskyblue;
 
   position: absolute;
-  opacity: 0.3;
+  opacity: 0.1;
+  left: 30px;
+  z-index: 3;
   /* TODO */
   /* 포지션 구현하기 */
   /* 불투명도 구현하기 */
@@ -42,5 +46,4 @@
   height: 349px;
 
   position: relative;
-  top: 200px;
 }
